Fix C++-Interpreter after "8036956: remove EnableInvokeDynamic flag"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b14

      Change "8036956: remove EnableInvokeDynamic flag" introduced a bogus "}" which prevents the C++-Interpreter from building. The fix is trivial:

      diff -r 5f1e8fe1a4af src/share/vm/interpreter/bytecodeInterpreter.cpp
      --- a/src/share/vm/interpreter/bytecodeInterpreter.cpp Tue May 06 09:13:36 2014 +0200
      +++ b/src/share/vm/interpreter/bytecodeInterpreter.cpp Tue May 06 10:50:32 2014 +0200
      @@ -508,7 +508,6 @@
       #ifdef ASSERT
         if (istate->_msg != initialize) {
           assert(labs(istate->_stack_base - istate->_stack_limit) == (istate->_method->max_stack() + 1), "bad stack limit");
      - }
       #ifndef SHARK
           IA32_ONLY(assert(istate->_stack_limit == istate->_thread->last_Java_sp() + 1, "wrong"));
       #endif // !SHARK

            Assignee:
            Volker Simonis
            Reporter:
            Volker Simonis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: