8042443: Fix C++-Interpreter after "8036956: remove EnableInvokeDynamic flag"

Insert missing bracket to make the interpreter build again

Reviewed-by: sla